mailpoet/assets/css/src/components-plugin/_premium-page.scss
.mailpoet_page_mailpoet-premium,
.admin_page_mailpoet-premium,
.admin_page_mailpoet-landingpage {
  #wpcontent {
    overflow-x: hidden;
  }

  #wpwrap {
    background: white;
  }

  div.updated,
  div.error,
  .update-nag,
  .notice {
    display: none !important;
  }

  img {
    max-width: 100%;
  }
}

.mailpoet-premium-page {
  color: $color-tertiary;
  margin: $grid-gap-large auto 0;
  max-width: 944px;

  p,
  ul {
    font-size: $font-size;
    line-height: $line-height;

    a {
      color: $color-secondary;
    }
  }

  p.mailpoet-premium-page-text-large {
    font-size: 22px;
  }

  h1 {
    margin-top: 0;
  }

  hr {
    background: $color-tertiary-light;
    border: none;
    height: 1px;
    margin: $grid-gap-large 0;
    width: 100%;
  }

  .mailpoet-button {
    margin-top: $grid-gap;
  }
}

// "div" used for higher specificity for mobile styles
div.mailpoet-premium-page-section {
  padding: $grid-gap-large 0;
  position: relative;
  z-index: 1;

  @include respond-to(small-screen) {
    grid-template-columns: 1fr;
    text-align: center;

    > img {
      margin: auto;
      max-width: 150px;
      order: -1;
    }
  }
}

.mailpoet-premium-page-section-narrow {
  margin: auto;
  max-width: 700px;
}

.mailpoet-premium-page-text-center {
  text-align: center;
}

.mailpoet-premium-page-intro {
  @include full-width-background(
    linear-gradient(to top, $color-white, $color-secondary-light)
  );
  align-items: center;

  img {
    margin: auto;
    max-width: 270px;
  }
}

.mailpoet-premium-page-upgrade-to-premium .mailpoet-grid-three-columns {
  grid-gap: $grid-gap-large;
}

.mailpoet-premium-page-get-started {
  @include full-width-background(
    linear-gradient(to top, $color-white, $color-secondary-light)
  );
}

.mailpoet-premium-page-bullet-list {
  li:before {
    content: '·';
    padding-right: 5px;
  }
}

.mailpoet-premium-page-features {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;

  .mailpoet-premium-page-feature {
    width: 29%;

    @include breakpoint-max-width(640px) {
      width: 49%;
    }

    @include breakpoint-max-width(500px) {
      width: 100%;
    }

    p,
    h2 {
      text-align: left;
    }
  }
}

.mailpoet-premium-page-options {
  margin: auto;
  max-width: 1000px;

  > div {
    align-items: center;
    background: $color-white;
    border-radius: 8px;
    box-shadow: 0 2px 4px 0 $color-secondary-light;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: $grid-gap-large;
    padding: 24px;
  }

  .mailpoet-button {
    width: 100%;
  }

  .mailpoet-premium-page-text-large {
    color: $color-secondary;
    margin-top: 0;
  }

  ul {
    color: $color-secondary;
    display: inline-block;
    text-align: left;
    width: 100%;

    li {
      margin: $grid-gap 0;
      position: relative;
    }

    li:before {
      background-color: $color-secondary-light;
      background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0.175 -0.365 17.008 17.008"%3E%3Cpath fill="%23ff5301" d="M16.983 1.923c0 .814-.369 1.607-1.106 2.38l-.114.115-6.453 6.796c-1.37 1.44-2.539 2.555-3.502 3.341s-1.644 1.18-2.041 1.18c-.417 0-.936-.197-1.556-.59-.62-.394-1.02-.799-1.2-1.216-.152-.349-.298-1.086-.434-2.214a30.519 30.519 0 0 1-.204-3.664c0-.717.299-1.38.897-1.988.6-.609 1.261-.914 1.983-.914.689 0 1.1.63 1.232 1.89l.03.324c.111.967.24 1.643.387 2.024.148.383.347.573.597.573.104 0 .299-.112.584-.339.356-.29.697-.598 1.022-.923l6.63-6.566c.557-.557 1.055-.978 1.491-1.263.439-.286.812-.429 1.117-.429.23 0 .394.087.49.261.098.175.146.467.146.877v.345h.004z"/%3E%3C/svg%3E%0A');
      background-position: center;
      background-repeat: no-repeat;
      background-size: 10px;
      border-radius: $form-control-border-radius;
      content: '';
      display: inline-block;
      height: 22px;
      margin-right: 14px;
      vertical-align: top;
      width: 22px;
    }
  }
}

.mailpoet-premium-three-columns-two-orphans {
  @include respond-to(not-small-screen) {
    grid-template-columns: repeat(6, 1fr);

    > div {
      grid-column: span 2;
    }

    > div:last-child:nth-child(3n - 1) {
      grid-column-end: -2;
    }

    > div:nth-last-child(2):nth-child(3n + 1) {
      grid-column-end: 4;
    }
  }
}

.mailpoet-premium-page-options-label-wrap {
  height: 3em;
}

.mailpoet-premium-feature-list-heading {
  align-self: flex-start;
  color: $color-secondary;
  margin-bottom: 0;
}

.mailpoet-premium-page-options-label {
  background: $color-tertiary;
  border-radius: 0 2px 2px 0;
  color: $color-white;
  font-weight: bold;
  left: 12px;
  margin-bottom: $grid-gap;
  padding: 2px 12px;
  position: relative;

  &:before {
    background: $color-secondary-middle;
    border-left: 12px solid $color-secondary;
    border-radius: 2px 0 0 2px;
    content: '';
    height: 100%;
    left: -24px;
    position: absolute;
    top: 0;
    width: 12px;
  }
}

.mailpoet-premium-page-options-divider {
  flex-grow: 100;
}

.mailpoet-premium-page-our-agency-license {
  align-items: center;
  grid-template-columns: 3fr 2fr;
}

.mailpoet-premium-page-footer-image {
  padding-bottom: 35%;
  width: 100%;
}

.mailpoet-premium-page-footer-image img {
  bottom: 0;
  left: -20px;
  position: absolute;
  right: 0;
  width: calc(100% + 20px);

  &:before {
    content: '';
    display: block;
    height: 1000px;
    width: 100%;
  }
}

